--- a/css/galerie.css
+++ b/css/galerie.css
@@ -1,35 +1,61 @@
-﻿/* Code css de Mary Lou sur http://tympanus.net/codrops/2011/12/26/css3-lightbox/*/
+﻿html {
+        height: 100%;
+}
+
+body {
+        position: relative;
+        background-color: white;
+        min-height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+        text-align: center;
+}
+
+
+#galerie1 {
+        display: flex;
+        flex-wrap: wrap;
+}
+
+/* Code css de Mary Lou sur http://tympanus.net/codrops/2011/12/26/css3-lightbox/*/
 /* Ce code est à personnaliser éventuellement...*/
 
-.lb-album{/*liste non ordonnée, conteneur vignettes*/
+.lb-album {
+        /*liste non ordonnée, conteneur vignettes*/
         width: 900px;
         margin: 0 auto;
         font-family: 'BebasNeueRegular', 'Arial Narrow', Arial, sans-serif;
 }
-.lb-album li{/*vignette*/
+
+.lb-album li {
+        /*vignette*/
         float: left;
         margin: 5px;
         position: relative;
 }
-.lb-album li > a,
-.lb-album li > a img{
+
+.lb-album li>a,
+.lb-album li>a img {
         display: block;
 }
-.lb-album li > a{
+
+.lb-album li>a {
         width: 150px;
         height: 150px;
         position: relative;
         padding: 15px;
         border: center;
         background: rgb(233, 95, 16);
-        -webkit-box-shadow: 1px 1px 2px #fff, 1px 1px 2px rgba(158,111,86,0.3) inset;
-        -moz-box-shadow: 1px 1px 2px #fff, 1px 1px 2px rgba(158,111,86,0.3) inset;
-        box-shadow: 1px 1px 2px #fff, 1px 1px 2px rgba(158,111,86,0.3) inset;
+        -webkit-box-shadow: 1px 1px 2px #fff, 1px 1px 2px rgba(158, 111, 86, 0.3) inset;
+        -moz-box-shadow: 1px 1px 2px #fff, 1px 1px 2px rgba(158, 111, 86, 0.3) inset;
+        box-shadow: 1px 1px 2px #fff, 1px 1px 2px rgba(158, 111, 86, 0.3) inset;
         -moz-border-radius: 4px;
         -webkit-border-radius: 4px;
         border-radius: 4px 4px 4px 4px;
 }
-.lb-album li > a span{
+
+.lb-album li>a span {
         position: absolute;
         width: 150px;
         height: 150px;
@@ -37,31 +63,38 @@
         left: 10px;
         text-align: center;
         line-height: 150px;
-        color: rgba(27,54,81,0.8);
-        text-shadow: 0px 1px 1px rgba(255,255,255,0.6);
+        color: rgba(27, 54, 81, 0.8);
+        text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.6);
         font-size: 24px;
         opacity: 0;
-        filter: alpha(opacity=0); /* internet explorer */
-    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=0)"; /*IE8*/
+        filter: alpha(opacity=0);
+        /* internet explorer */
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=0)";
+        /*IE8*/
         background: rgb(233, 95, 16);
-        background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%, rgba(241,210,194,1) 100%);
-        background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0.56)), color-stop(100%,rgba(241,210,194,1)));
-        background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
-        background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
-        background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
-        background: radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+        background: -moz-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 0.56) 0%, rgba(241, 210, 194, 1) 100%);
+        background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255, 255, 255, 0.56)), color-stop(100%, rgba(241, 210, 194, 1)));
+        background: -webkit-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 0.56) 0%, rgba(241, 210, 194, 1) 100%);
+        background: -o-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 0.56) 0%, rgba(241, 210, 194, 1) 100%);
+        background: -ms-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 0.56) 0%, rgba(241, 210, 194, 1) 100%);
+        background: radial-gradient(center, ellipse cover, rgba(255, 255, 255, 0.56) 0%, rgba(241, 210, 194, 1) 100%);
         -webkit-transition: opacity 0.3s linear;
         -moz-transition: opacity 0.3s linear;
         -o-transition: opacity 0.3s linear;
         -ms-transition: opacity 0.3s linear;
         transition: opacity 0.3s linear;
 }
-.lb-album li > a:hover span{
+
+.lb-album li>a:hover span {
         opacity: 1;
-        filter: alpha(opacity=99); /* internet explorer */
-    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=99)"; /*IE8*/
+        filter: alpha(opacity=99);
+        /* internet explorer */
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=99)";
+        /*IE8*/
 }
-.lb-overlay{/* Conteneur lightbox au démarrage*/
+
+.lb-overlay {
+        /* Conteneur lightbox au démarrage*/
         width: 0px;
         height: 0px;
         position: fixed;
@@ -72,50 +105,60 @@
         z-index: 99;
         text-align: center;
         background: rgb(233, 95, 16);
-        background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%, rgba(241,210,194,1) 100%);
-        background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0.56)), color-stop(100%,rgba(241,210,194,1)));
-        background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
-        background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
-        background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
-        background: radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+        background: -moz-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 0.56) 0%, rgba(241, 210, 194, 1) 100%);
+        background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255, 255, 255, 0.56)), color-stop(100%, rgba(241, 210, 194, 1)));
+        background: -webkit-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 0.56) 0%, rgba(241, 210, 194, 1) 100%);
+        background: -o-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 0.56) 0%, rgba(241, 210, 194, 1) 100%);
+        background: -ms-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 0.56) 0%, rgba(241, 210, 194, 1) 100%);
+        background: radial-gradient(center, ellipse cover, rgba(255, 255, 255, 0.56) 0%, rgba(241, 210, 194, 1) 100%);
 }
-.lb-overlay > div{/*contient titre et navigation*/
+
+.lb-overlay>div {
+        /*contient titre et navigation*/
         position: relative;
-        color: rgba(27,54,81,0.8);
+        color: rgba(27, 54, 81, 0.8);
         width: 550px;
         height: 80px;
         margin: 40px auto 0px auto;
-        text-shadow: 0px 1px 1px rgba(255,255,255,0.6);
+        text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.6);
 }
+
 .lb-overlay div h3,
-.lb-overlay div p{
+.lb-overlay div p {
         padding: 0px 20px;
         width: 400px;
         height: 60px;
 }
-.lb-overlay div h3{/*titre image grand format*/
+
+.lb-overlay div h3 {
+        /*titre image grand format*/
         font-size: 30px;
         float: left;
         text-align: center;
-        border-right: 1px solid rgba(27,54,81,0.4);
+        border-right: 1px solid rgba(27, 54, 81, 0.4);
 }
+
 .lb-overlay div h3 span,
-.lb-overlay div p{
+.lb-overlay div p {
         /*font-size: 16px;
         font-family: Constantia, Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;*/
         font-style: italic;
 }
-.lb-overlay div h3 span{
+
+.lb-overlay div h3 span {
         display: block;
         line-height: 6px;
 }
-.lb-overlay div p{
+
+.lb-overlay div p {
         font-size: 14px;
         text-align: center;
         float: left;
         width: 260px;
 }
-.lb-overlay a.lb-close{/*fermeture  lightbox*/
+
+.lb-overlay a.lb-close {
+        /*fermeture  lightbox*/
         background: rgb(233, 95, 16);
         z-index: 1001;
         color: #fff;
@@ -130,29 +173,38 @@
         overflow: hidden;
         margin-left: -25px;
         opacity: 0;
-        filter: alpha(opacity=0); /* internet explorer */
-    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=0)"; /*IE8*/
-        -webkit-box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
-        -moz-box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
-        box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
+        filter: alpha(opacity=0);
+        /* internet explorer */
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=0)";
+        /*IE8*/
+        -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+        -moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+        box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
 }
-.lb-overlay img{/*image grand format avec transition css*/
+
+.lb-overlay img {
+        /*image grand format avec transition css*/
         /* height: 100%; For Opera max-height does not seem to work */
         max-height: 100%;
         position: relative;
         opacity: 0;
-        filter: alpha(opacity=0); /* internet explorer */
-    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=0)"; /*IE8*/
-        -webkit-box-shadow: 1px 1px 4px rgba(0,0,0,0.3);
-        -moz-box-shadow: 1px 1px 4px rgba(0,0,0,0.3);
-        box-shadow: 0px 2px 7px rgba(0,0,0,0.2);
+        filter: alpha(opacity=0);
+        /* internet explorer */
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=0)";
+        /*IE8*/
+        -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
+        -moz-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
+        box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.2);
         -webkit-transition: opacity 0.5s linear;
         -moz-transition: opacity 0.5s linear;
         -o-transition: opacity 0.5s linear;
         -ms-transition: opacity 0.5s linear;
         transition: opacity 0.5s linear;
 }
-.lb-prev, .lb-next{/*navigation*/
+
+.lb-prev,
+.lb-next {
+        /*navigation*/
         text-indent: -9000px;
         position: absolute;
         top: -32px;
@@ -160,39 +212,54 @@
         height: 25px;
         left: 50%;
         opacity: 0.8;
-        filter: alpha(opacity=80); /* internet explorer */
-    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=80)"; /*IE8*/
+        filter: alpha(opacity=80);
+        /* internet explorer */
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=80)";
+        /*IE8*/
 }
-.lb-prev:hover, .lb-next:hover{
+
+.lb-prev:hover,
+.lb-next:hover {
         opacity: 1;
-        filter: alpha(opacity=99); /* internet explorer */
-    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=99)"; /*IE8*/
+        filter: alpha(opacity=99);
+        /* internet explorer */
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=99)";
+        /*IE8*/
 }
-.lb-prev{
+
+.lb-prev {
         margin-left: -30px;
         background: transparent url(img/flechegauche.png) no-repeat top left;
 }
-.lb-next{
+
+.lb-next {
         margin-left: 6px;
         background: transparent url(../img/flechedroite.png) no-repeat top right;
 }
-.lb-overlay:target {/*ouverture de la lightbox, background opaque*/
+
+.lb-overlay:target {
+        /*ouverture de la lightbox, background opaque*/
         width: auto;
         height: auto;
         bottom: 0px;
         right: 0px;
         padding: 80px 100px 120px 100px;
 }
+
 .lb-overlay:target img,
-.lb-overlay:target a.lb-close{
+.lb-overlay:target a.lb-close {
         opacity: 1;
-        filter: alpha(opacity=99); /* internet explorer */
-    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=99)"; /*IE8*/
+        filter: alpha(opacity=99);
+        /* internet explorer */
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=99)";
+        /*IE8*/
 }
+
 /*
         100% Height for Opera as the max-height seems to be ignored, not optimal for large screens
         http://bricss.net/post/11230266445/css-hack-to-target-opera
 */
-x:-o-prefocus, .lb-overlay img {
-    height: 100%;
+x:-o-prefocus,
+.lb-overlay img {
+        height: 100%;
 }
