--- a/css/header.css
+++ b/css/header.css
@@ -8,10 +8,10 @@
 }
 
 #logocm{
-    width:10em;
-    z-index: 40;
+    width:12em;
+    z-index: 30;
     position:absolute;
-    margin-top: 0em;
+    margin-top: -2em;
     margin-left:4.5em;
 
 }
@@ -24,13 +24,13 @@
 }
 
 .fas {
-    margin-left: 4em;
+    margin-left: 6em;
 }
 
-#galerie{
-    margin-left: 18em;
+#faq{
+    margin-left: 17em;
 }
 
 #contact{
-    margin-left: 10em;
+    margin-left: 20em;
 }
