--- a/css/style.css
+++ b/css/style.css
@@ -56,13 +56,13 @@ p {
 /******* PRESENTATION ********/
 .presentation {
     position: relative;
-    height: 50vh;
+    min-height: 50vh;
     background-color: white;
 }
 
 .presentation:after {
     position: absolute;
-    height: 50vh;
+    min-height: 50vh;
     content: '';
     background-color: inherit;
     top: -4em;
@@ -74,7 +74,7 @@ p {
 }
 
 .carousel-item {
-    height: 45vh;
+    min-height: 45vh;
     margin-left: 0%;
     margin-right: -100% !important;
     margin-bottom: 2.5em;
@@ -161,10 +161,13 @@ p {
    /* background: -moz-linear-gradient(left, #FB9F15 0%, #F4552B 100%);
     background: -webkit-linear-gradient(left, #FB9F15 0%, #F4552B 100%);
     background: linear-gradient(to right, #FB9F15 0%, #F4552B 100%);*/
-    width: 70%;
+    width: 70vw;
     margin-left: auto;
     margin-right: auto;
     border-radius: 1em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .new_edition h1 {
@@ -174,7 +177,6 @@ p {
 }
 
 #button1 {
-margin-top: 7%;
     background-color: white;
     font-weight: bold;
     color:black !important;
@@ -182,7 +184,7 @@ margin-top: 7%;
     line-height: 1.5em;
     text-decoration: none;
     width: 18em;
-    border: 1px grey solid;
+    border: 0px grey solid;
 }
 
 .hvr-rectangle-out {
@@ -200,6 +202,7 @@ margin-top: 7%;
 #collapseExample>.card.card-body {
     background: url(../img/fond.jpg);
     background-size: cover;
+    width: 70vw;
     /*background: -moz-linear-gradient(left, #FB9F15 0%, #F4552B 100%);
     background: -webkit-linear-gradient(left, #FB9F15 0%, #F4552B 100%);
     background: linear-gradient(to right, #FB9F15 0%, #F4552B 100%);
@@ -318,3 +321,27 @@ margin-top: 7%;
 #carousel-control-next-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e")
 }
+
+
+/**** MEDIA QUERIES *****/
+
+@media (max-width: 500px) {
+    /*.presentation {
+        height: 100vh;
+    }
+    
+    .presentation:after {
+        height: 100vh;
+        background-color: inherit;
+        top: -4em;
+        right: 0;
+        bottom: 0;
+        left: 0;
+    }
+    .carousel-item {
+        height: 95vh;
+        margin-bottom: 2.5em;
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+  }*/
