--- a/css/formulaire.css
+++ b/css/formulaire.css
@@ -4,7 +4,7 @@ html{
 
 body {
   background:  url(../img/eclair.png) no-repeat center/65% ,
-   url(../img/superhero20182019.png) no-repeat right/35% ,
+   url(../img/logoetudiant.png) no-repeat right/20% ,
    url(../img/superhero2017.png) no-repeat left/35% ;
   /*background-size: 65%;*/
    width:auto; 
